# cars-prediction-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: .env.example  Makefile  README.md  pyproject.toml
api/app/api/endpoints/: predict.py
api/app/core/: config.py
api/app/schemas/: prediction.py
api/app/services/: mock_db.py  model_service.py
api/tests/: test_predict.py
app/: main.py
app/api/endpoints/: health.py
app/core/: config.py
app/schemas/: health.py  prediction.py
app/services/: mock_db.py  model_service.py
tests/: test_health.py  test_predict.py
training/: .gitignore  Makefile  README.md  pyproject.toml
training/src/: kaggle.py  train.py
