[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cars-prediction-training"
version = "0.1.0"
description = "Training pipeline for Poland used cars linear regression model."
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "numpy>=2.3.0,<3",
    "pandas>=2.3.3,<4",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
